--- a/homelab/templates/pg-backup-cronjob.yaml
+++ b/homelab/templates/pg-backup-cronjob.yaml
@@ -14,7 +14,7 @@ spec:
             imagePullPolicy: IfNotPresent
             env:
               - name: S3_BUCKET
-                value: {{ .Values.pg-backup.s3-bucket }}
+                value: "{{ .Values.pgBackup.s3Bucket }}"
               - name: PG_USER
                 value: {{ .Values.postgres.user }}
               - name: PG_PASS
@@ -22,7 +22,7 @@ spec:
               - name: PG_HOST
                 value: postgres
               - name: PG_PORT
-                value: {{ .Values.postgres.port }}
+                value: "{{ .Values.postgres.port }}"
               - name: AWS_ACCESS_KEY_ID
                 value: {{ .Values.aws.key }}
               - name: AWS_SECRET_ACCESS_KEY
