--- a/homelab/values.yaml
+++ b/homelab/values.yaml
@@ -25,6 +25,10 @@ images:
     image: sethpyle/pg-backup
     tag: 1.0.1
     imagePullPolicy: IfNotPresent
+  calibre:
+    image: linuxserver/calibre
+    tag: 2021.11.04
+    imagePullPolicy: IfNotPresent
 
 postgres:
   user:
