added tls to ingresses

--- a/homelab/templates/calibre-ingress.yaml
+++ b/homelab/templates/calibre-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: calibre-ingress
 spec:
   tls:
+    - secretName: "le-cert"
     - hosts:
         - library.sethpyle.com
   rules:
