--- a/homelab/templates/ghost-deployment.yaml
+++ b/homelab/templates/ghost-deployment.yaml
@@ -18,6 +18,9 @@ spec:
         - name: ghost
           persistentVolumeClaim:
             claimName: ghost-pvc
+        - name: ghost-content
+          persistentVolumeClaim:
+            claimName: ghost-content-pvc
       containers:
         - name: ghost
           image: {{ .Values.images.ghost.image }}:{{ .Values.images.ghost.tag }}
@@ -37,5 +40,7 @@ spec:
           volumeMounts:
             - name: ghost
               mountPath: /ghost
+            - name: ghost-content
+              mountPath: /var/lib/ghost/content/themes
           imagePullPolicy: {{ .Values.images.ghost.imagePullPolicy }}
 
