--- a/homelab/values.yaml
+++ b/homelab/values.yaml
@@ -29,6 +29,10 @@ images:
     image: linuxserver/calibre-web
     tag: 2021.11.04
     imagePullPolicy: IfNotPresent
+  airsonic:
+    image: linuxserver/airsonic
+    tag: 10.6.2
+    imagePullPolicy: IfNotPresent
 
 postgres:
   user:
