--- a/homelab/values.yaml
+++ b/homelab/values.yaml
@@ -49,6 +49,14 @@ images:
     image: nginx
     tag: 1.21.4
     imagePullPolicy: IfNotPresent
+  searxng:
+    image: searxng/searxng
+    tag: 1.0.0-1166-da1d502c
+    imagePullPolicy: IfNotPresent
+  grafana:
+    image: grafana/grafana
+    tag: 8.3.2-ubuntu
+    imagePullPolicy: IfNotPresent
 
 postgres:
   user:
@@ -79,3 +87,9 @@ aws:
   key:
   secret:
   defaultRegion: us-east-1
+
+searxng:
+  port: 8080
+  secret:
+  baseURL:
+  replicaCount: 1
