--- a/homelab/templates/nitter-ingress.yaml
+++ b/homelab/templates/nitter-ingress.yaml
@@ -2,6 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: nitter-ingress
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-auth@kubernetescrd
 spec:
   tls:
     - secretName: "le-cert"
