--- a/homelab/templates/planka-ingress.yaml
+++ b/homelab/templates/planka-ingress.yaml
@@ -1,7 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: planka-ingress
+  name: planka-ingress  
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-auth@kubernetescrd
+
 spec:
   tls:
     - secretName: "le-cert"
