--- a/homelab/templates/node-red-deployment.yaml
+++ b/homelab/templates/node-red-deployment.yaml
@@ -27,7 +27,13 @@ spec:
           ports:
             - containerPort: {{ .Values.nodered.port }}
               protocol: TCP
-          resources: {}
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "50m"
+            limits:
+              memory: "128Mi"
+              cpu: "250m"
           volumeMounts:
             - name: nodered-data
               mountPath: /data
