--- a/homelab/templates/grafana-deployment.yaml
+++ b/homelab/templates/grafana-deployment.yaml
@@ -24,7 +24,13 @@ spec:
           ports:
             - containerPort: 3000
               protocol: TCP
-          resources: {}
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "10m"
+            limits:
+              memory: "256Mi"
+              cpu: "100m"
           volumeMounts:
             - name: grafana
               mountPath: /var/lib/grafana
