--- a/homelab/templates/home-assistant-deployment.yaml
+++ b/homelab/templates/home-assistant-deployment.yaml
@@ -27,7 +27,13 @@ spec:
           env:
             - name: TZ
               value: 'America/Chicago'
-          resources: {}
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "10m"
+            limits:
+              memory: "128Mi"
+              cpu: "50m"
           volumeMounts:
             - name: homeassistant
               mountPath: /config
