--- a/homelab/templates/irc-deployment.yaml
+++ b/homelab/templates/irc-deployment.yaml
@@ -24,6 +24,13 @@ spec:
           ports:
             - containerPort: {{ .Values.irc.port }}
               protocol: TCP
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "50m"
+            limits:
+              memory: "128Mi"
+              cpu: "100m"
           volumeMounts:
             - name: irc-data
               mountPath: /var/opt/thelounge
