--- a/homelab/templates/matrix-deployment.yaml
+++ b/homelab/templates/matrix-deployment.yaml
@@ -43,6 +43,13 @@ spec:
           ports:
             - containerPort: 8008
               protocol: TCP
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "10m"
+            limits:
+              memory: "256Mi"
+              cpu: "50m"
           volumeMounts:
             - name: matrix-data
               mountPath: /data
