--- a/homelab/templates/n8n-deployment.yaml
+++ b/homelab/templates/n8n-deployment.yaml
@@ -24,6 +24,13 @@ spec:
           ports:
             - containerPort: {{ .Values.n8n.port }}
               protocol: TCP
+          resources:
+            requests:
+              memory: "32Mi"
+              cpu: "10m"
+            limits:
+              memory: "64Mi"
+              cpu: "50m"
           env:
             - name: DB_TYPE
               value: postgresdb
