--- a/homelab/templates/redis-deployment.yaml
+++ b/homelab/templates/redis-deployment.yaml
@@ -20,4 +20,11 @@ spec:
           ports:
             - containerPort: {{ .Values.redis.port }}
               protocol: TCP
+          resources:
+            requests:
+              memory: "32Mi"
+              cpu: "10m"
+            limits:
+              memory: "64Mi"
+              cpu: "50m"
           imagePullPolicy: {{ .Values.images.redis.imagePullPolicy }}
