--- a/homelab/templates/teddit-deployment.yaml
+++ b/homelab/templates/teddit-deployment.yaml
@@ -35,4 +35,11 @@ spec:
               value: 'false'
             - name: REDIS_HOST
               value: 'redis'
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "500m"
+            limits:
+              memory: "512Mi"
+              cpu: "1"
           imagePullPolicy: {{ .Values.images.teddit.imagePullPolicy }}
