--- a/homelab/templates/freshrss-volume.yaml
+++ b/homelab/templates/freshrss-volume.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: freshrss-pvc
+  name: freshrss-longhorn-pvc
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: longhorn-static
   resources:
     requests:
-      storage: 1Gi
+      storage: 500Mi
