--- a/homelab/templates/nitter-deployment.yaml
+++ b/homelab/templates/nitter-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nitter
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nitter
@@ -14,27 +14,30 @@ spec:
       labels:
         app: nitter
     spec:
-      volumes:
-        - name: nitter-data
-          persistentVolumeClaim:
-            claimName: nitter-data-pvc
       containers:
         - name: nitter
           image: {{ .Values.images.nitter.image }}:{{ .Values.images.nitter.tag }}
           env:
+            - name: NITTER_HOST
+              value: 'nitter.sethpyle.com'
             - name: REDIS_HOST
-              value: redis
+              value: 'redis'
+            - name: REDIS_PORT
+              value: '6379'
+            - name: REPLACE_TWITTER
+              value: 'nitter.sethpyle.com'
+            - name: REPLACE_YOUTUBE
+              value: 'youtube.sethpyle.com'
+            - name: TITLE
+              value: 'Seths Private Twitter'
           resources:
             requests:
-              memory: "10Mi"
-              cpu: "10m"
+              memory: "50Mi"
+              cpu: "100m"
             limits:
-              memory: "20Mi"
-              cpu: "50m"
+              memory: "100Mi"
+              cpu: "200m"
           ports:
             - containerPort: {{ .Values.nitter.port }}
               protocol: TCP
           imagePullPolicy: {{ .Values.images.nitter.imagePullPolicy }}
-          volumeMounts:
-            - name: nitter-data
-              mountPath: /data
