--- a/homelab/templates/postgres.yaml
+++ b/homelab/templates/postgres.yaml
@@ -42,4 +42,31 @@ spec:
             - name: postgresdb
               mountPath: /var/lib/postgresql/data
           imagePullPolicy: {{ .Values.images.postgres.imagePullPolicy }}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 10Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres
+  labels:
+    app: postgres
+spec:
+  ports:
+    - protocol: TCP
+      port: {{ .Values.postgres.port }}
+      targetPort: {{ .Values.postgres.port }}
+  selector:
+    app: postgres
+  type: ClusterIP
 
