--- a/homelab/templates/redis.yaml
+++ b/homelab/templates/redis.yaml
@@ -28,3 +28,18 @@ spec:
               memory: "64Mi"
               cpu: "50m"
           imagePullPolicy: {{ .Values.images.redis.imagePullPolicy }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis
+  labels:
+    app: redis
+spec:
+  ports:
+    - protocol: TCP
+      port: {{ .Values.redis.port }}
+      targetPort: {{ .Values.redis.port }}
+  selector:
+    app: redis
+  type: ClusterIP
