--- a/homelab/templates/twitter.yaml
+++ b/homelab/templates/twitter.yaml
@@ -41,3 +41,40 @@ spec:
             - containerPort: {{ .Values.nitter.port }}
               protocol: TCP
           imagePullPolicy: {{ .Values.images.nitter.imagePullPolicy }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nitter
+  labels:
+    app: nitter
+spec:
+  ports:
+    - protocol: TCP
+      port: {{ .Values.nitter.port }}
+      targetPort: {{ .Values.nitter.port }}
+  selector:
+    app: nitter
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nitter-ingress
+  annotations:
+    kubernetes.io/ingress.class: traefik
+spec:
+  tls:
+    - secretName: "le-cert"
+    - hosts:
+        - nitter.sethpyle.com
+  rules:
+    - host: nitter.sethpyle.com
+      http:
+        paths:
+          - pathType: ImplementationSpecific
+            backend:
+              service:
+                name: nitter
+                port:
+                  number: {{ .Values.nitter.port }}
