--- a/homelab/templates/calibre.yaml
+++ b/homelab/templates/calibre.yaml
@@ -40,3 +40,62 @@ spec:
             - name: calibre-config
               mountPath: /config
           imagePullPolicy: {{ .Values.images.calibre.imagePullPolicy }}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: calibre-data-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 5Gi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: calibre-config-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: calibre
+  labels:
+    app: calibre
+spec:
+  ports:
+    - protocol: TCP
+      port: 8083
+      targetPort: 8083
+  selector:
+    app: calibre
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: calibre-ingress
+spec:
+  tls:
+    - secretName: "le-cert"
+    - hosts:
+        - library.sethpyle.com
+  rules:
+    - host: library.sethpyle.com
+      http:
+        paths:
+          - pathType: ImplementationSpecific
+            backend:
+              service:
+                name: calibre
+                port:
+                  number: 8083
