--- a/homelab/templates/homeassistant.yaml
+++ b/homelab/templates/homeassistant.yaml
@@ -38,4 +38,52 @@ spec:
             - name: homeassistant
               mountPath: /config
           imagePullPolicy: {{ .Values.images.homeassistant.imagePullPolicy }}
-
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: homeassistant-config-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 1Gi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: homeassistant
+  labels:
+    app: homeassistant
+spec:
+  ports:
+    - protocol: TCP
+      port: 8123
+      targetPort: 8123
+  selector:
+    app: homeassistant
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: homeassistant-ingress
+  annotations:
+    traefik.frontend.passHostHeader: "false"
+spec:
+  tls:
+    - secretName: "le-cert"
+    - hosts:
+        - home.sethpyle.com
+  rules:
+    - host: home.sethpyle.com
+      http:
+        paths:
+          - pathType: ImplementationSpecific
+            backend:
+              service:
+                name: homeassistant
+                port:
+                  number: 8123
