--- a/homelab/templates/freshrss.yaml
+++ b/homelab/templates/freshrss.yaml
@@ -42,8 +42,8 @@ metadata:
   name: freshrss-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: local-path
+    - ReadWriteMany
+  storageClassName: nfs-client
   resources:
     requests:
       storage: 500Mi
