--- a/homelab/templates/grafana.yaml
+++ b/homelab/templates/grafana.yaml
@@ -43,10 +43,10 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: nfs-client
   resources:
     requests:
-      storage: 10Gi
+      storage: 5Gi
 ---
 apiVersion: v1
 kind: Service
