--- a/homelab/templates/gitea.yaml
+++ b/homelab/templates/gitea.yaml
@@ -53,11 +53,11 @@ metadata:
   name: gitea-pvc
 spec:
   accessModes:
-    - ReadWriteOnce
-  storageClassName: local-path
+    - ReadWriteMany
+  storageClassName: nfs-client
   resources:
     requests:
-      storage: 10Gi
+      storage: 5Gi
 ---
 apiVersion: v1
 kind: Service
