--- a/homelab/templates/nodered.yaml
+++ b/homelab/templates/nodered.yaml
@@ -57,7 +57,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
+  storageClassName: nfs-client
   resources:
     requests:
       storage: 5Gi
